added new portfolio

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="nav_container">
       <div class="logo_container">
         <!-- <p>ayoei</p> -->
-        <img src="./assets/img/logo2.png" alt="logo" width="50">
+        <img src="./assets/img/logo2.webp" alt="logo" width="50">
       </div>
       <div class="menu_container">
         <i class="uil uil-apps" id="mobile_menu_toggle"></i>
@@ -44,7 +44,7 @@
   <main class="main">
     <!--==================== HOME ====================-->
     <section class="home container" id="home">
-      
+
 
       <div class="scroll_down_container">
         <i class="uil uil-mouse-alt"></i>
@@ -66,7 +66,7 @@
                 class="uil uil-navigator"></i></button></a>
         </div>
         <div class="hero_img_container">
-          <img src="./assets/img/me-1.png" alt="" width="300">
+          <img src="./assets/img/me-1.webp" alt="" width="300">
         </div>
       </div>
     </section>
@@ -80,12 +80,13 @@
       </div>
       <div class="about_content">
         <div class="about_img">
-          <img src="./assets/img/3dmodel.png">
+          <img src="./assets/img/3dmodel.webp">
         </div>
         <div class="about_info">
           <p>
             I Specialize in transforming ideas into interactive, user-friendly websites and web
-            applications, delivering exceptional value to businesses by crafting seamless and visually stunning digital experiences.
+            applications, delivering exceptional value to businesses by crafting seamless and visually stunning digital
+            experiences.
           </p>
           <div class="stats">
             <p class="stats_item"><span>07+</span>Months of experience</p>
@@ -184,7 +185,7 @@
             <!-- Slides -->
             <div class="swiper-slide">
               <div class="slide_content">
-                <img class="project_img" src="./assets/img/Movieapp.png">
+                <img class="project_img" src="./assets/img/Movieapp.webp">
                 <div class="project_info">
                   <h3>ArkMovies App</h3>
                   <p>Movie App built with pure HTML5 and CSS3 and Javascript.</p>
@@ -195,10 +196,11 @@
             </div>
             <div class="swiper-slide">
               <div class="slide_content">
-                <img class="project_img" src="./assets/img/moc.png">
+                <img class="project_img" src="./assets/img/moc.webp">
                 <div class="project_info">
                   <h3>Museum Of Cars</h3>
-                  <p>Museum of cars is a website created with html5, css3 and Bootstrap, pretty simple single page website made responsive for mobile and desktop use.</p>
+                  <p>Museum of cars is a website created with html5, css3 and Bootstrap, pretty simple single page
+                    website made responsive for mobile and desktop use.</p>
                   <a href="https://museumofcars.netlify.app/" target="_blank"><button class="demo_btn btn">Demo <i
                         class="uil uil-arrow-right"></i></button></a>
                 </div>
@@ -206,7 +208,7 @@
             </div>
             <div class="swiper-slide">
               <div class="slide_content">
-                <img class="project_img" src="./assets/img/portfolio1.png">
+                <img class="project_img" src="./assets/img/portfolio1.webp">
                 <div class="project_info">
                   <h3>Portfolio Website</h3>
                   <p>A minimal, software engineer portfolio. The layout was simple, It was structured in such a way that
@@ -218,11 +220,12 @@
             </div>
             <div class="swiper-slide">
               <div class="slide_content">
-                <img class="project_img" src="./assets/img/blogapp.png">
+                <img class="project_img" src="./assets/img/blogapp.webp">
                 <div class="project_info">
                   <h3>Blog App</h3>
                   <p>Blog App Backend created with MERN Stack</p>
-                  <a href="https://github.com/ayoei/arkx-bootcamp/tree/master/Week-3/Week-Challenge" target="_blank"><button class="demo_btn btn">Demo
+                  <a href="https://github.com/ayoei/arkx-bootcamp/tree/master/Week-3/Week-Challenge"
+                    target="_blank"><button class="demo_btn btn">Demo
                       <i class="uil uil-arrow-right"></i></button></a>
                 </div>
               </div>
