--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <script src="https://kit.fontawesome.com/ebde7b45ee.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
+  <!--==================== Animate.Style ====================-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
   <!--==================== SWIPER JS ====================-->
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
@@ -27,13 +30,13 @@
         <img src="./assets/img/logo2.webp" alt="logo" width="50">
       </div>
       <div class="menu_container">
-        <i class="uil uil-apps" id="mobile_menu_toggle"></i>
+        <i class="uil uil-bars" id="mobile_menu_toggle"></i>
         <ul class="menu">
           <li class="menu_item menu_item_btn active"><i class="uil uil-estate"></i><a>Home</a></li>
           <li class="menu_item menu_item_btn"><i class="uil uil-user"></i><a>About</a></li>
           <li class="menu_item menu_item_btn"><i class="uil uil-file-alt"></i><a>Skills</a></li>
           <li class="menu_item menu_item_btn"><i class="uil uil-scenery"></i><a>Portfolio</a></li>
-          <li class="menu_item menu_item_btn"><i class="uil uil-navigator"></i><a>Contact</a></li>
+          <li class="menu_item menu_item_btn"><i class="uil uil-navigator"></i><a href="#contact">Contact</a></li>
         </ul>
         <i id="theme_toggle_button" class="uil uil-moon"></i>
       </div>
@@ -56,7 +59,9 @@
         <div class="text_container">
           <h1>Hi, I'am Ayoub</h1>
           <h3>Full Stack Web Developer</h3>
-          <p>Moderate experience in web design and development knowledge, producing quality work.</p>
+          <!-- <p>Moderate experience in web design and development knowledge, producing quality work.</p> -->
+          <p>Full Stack Web Developer passionate about
+            crafting dynamic and innovative web solutions.</p>
           <div class="social_links">
             <a href="https://www.linkedin.com/in/ayoub.elharaoui/"><i class="uil uil-linkedin-alt"></i></a>
             <a href="https://github.com/ayoam"><i class="uil uil-github-alt"></i></a>
@@ -83,11 +88,22 @@
           <img src="./assets/img/3dmodel.webp">
         </div>
         <div class="about_info">
-          <p>
+          <!-- <p>
             I Specialize in transforming ideas into interactive, user-friendly websites and web
             applications, delivering exceptional value to businesses by crafting seamless and visually stunning digital
             experiences.
-          </p>
+          </p> -->
+          <p>Dedicated junior full-stack web
+            developer with a strong passion for
+            web development.
+            I bring advanced proficiency in
+            both front-end and back-end
+            technologies.
+            as a proactive problem solver, I
+            thrive on tackling new challenges
+            and continually sharpening my
+            skills to be an invaluable asset to
+            any project or team.</p>
           <div class="stats">
             <p class="stats_item"><span>07+</span>Months of experience</p>
             <p class="stats_item"><span>04+</span>Completed projects</p>
@@ -256,7 +272,7 @@
         <div class="contact_info">
           <div class="info">
             <i class="uil uil-phone-alt"></i>
-            <p><span>Call Me</span>+212(0)6.23.05.91.01</p>
+            <p><span>Call Me</span>+212 6 23 05 91 01</p>
           </div>
           <div class="info">
             <i class="uil uil-envelope-alt"></i>
