added new portfolio

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <a href="https://instagram.com/ayoei"><i class="uil uil-instagram"></i></a>
           </div>
           <a href="mailto:ayoub.elharaoui@outlook.com"><button class="contact_btn btn">Contact Me <i
-                class="uil uil-navigator"></i></button></a>
+                class="icoo uil-fast-mail"></i></button></a>
         </div>
         <div class="hero_img_container">
           <img src="./assets/img/me-1.webp" alt="" width="300">
@@ -110,7 +110,7 @@
             <p class="stats_item" style="visibility: hidden;"><span>00+</span>Companies worked</p>
           </div>
           <a href="./assets/pdf/cv.pdf" target="_blank"><button class="CV_btn btn">Download CV <i
-                class="uil uil-download-alt"></i></button></a>
+                class="icoo uil-cloud-download"></i></button></a>
         </div>
       </div>
     </section>
@@ -303,7 +303,7 @@
               <textarea name="message_input" id="message_input" cols="30" rows="10"></textarea>
             </div>
           </form>
-          <button class="btn" id="form_submit_btn">Send message <i class="uil uil-navigator"></i></button>
+          <button class="btn" id="form_submit_btn">Send message <i class="icoo uil-fast-mail"></i></button>
         </div>
       </div>
     </section>
