--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             crafting dynamic and innovative web solutions.</p>
           <div class="social_links">
             <a href="https://www.linkedin.com/in/ayoub.elharaoui/"><i class="uil uil-linkedin-alt"></i></a>
-            <a href="https://github.com/ayoam"><i class="uil uil-github-alt"></i></a>
+            <a href="https://github.com/ayoei"><i class="uil uil-github-alt"></i></a>
             <a href="https://instagram.com/ayoei"><i class="uil uil-instagram"></i></a>
           </div>
           <a href="mailto:ayoub.elharaoui@outlook.com"><button class="contact_btn btn">Contact Me <i
