--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div class="social_links">
             <a href="https://www.linkedin.com/in/ayoub.elharaoui/"><i class="uil uil-linkedin-alt"></i></a>
             <a href="https://github.com/ayoei"><i class="uil uil-github-alt"></i></a>
-            <a href="https://instagram.com/ayoei"><i class="uil uil-instagram"></i></a>
+            <a href="https://instagram.com/ayo_ei"><i class="uil uil-instagram"></i></a>
           </div>
           <a href="mailto:ayoub.elharaoui@outlook.com"><button class="contact_btn btn">Contact Me <i
                 class="icoo uil-fast-mail"></i></button></a>
