updated Linkedin Profile Link

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <p>Full Stack Web Developer passionate about
             crafting dynamic and innovative web solutions.</p>
           <div class="social_links">
-            <a href="https://www.linkedin.com/in/ayoub.elharaoui/"><i class="uil uil-linkedin-alt"></i></a>
+            <a href="https://www.linkedin.com/in/ayoub-elharaoui/"><i class="uil uil-linkedin-alt"></i></a>
             <a href="https://github.com/ayoei"><i class="uil uil-github-alt"></i></a>
             <a href="https://instagram.com/ayo_ei"><i class="uil uil-instagram"></i></a>
           </div>
